this commit implements coloring

--- a/fe-form-validation/signup.html
+++ b/fe-form-validation/signup.html
@@ -27,7 +27,7 @@
         placeholder="Insert URL Here"
         name="avatarimageurl"
       />
-      <div class="button-group">
+      <div class="button">
         <button id="submit" type="submit">Submit</button>
         <button id="reset" type="reset">Reset</button>
       </div>
